--- a/1D_Correaltion_Convolution.ipynb
+++ b/1D_Correaltion_Convolution.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import tkinter as tk\n",
     "from tkinter import scrolledtext\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
